--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app {
+  display: grid;
   min-height: 100vh;
+  grid-template-columns: 15% auto; /* Left = 20%, Right = 80% */
+  border-radius: 20px;
+  padding: 5px;
+  margin: .5rem;
+}
+
+/* Left section (sidebar, etc.) */
+.leftSectionApp {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: var(--spacing-md);
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+/* Right section (main content) */
+.rightSectionApp {
+  display: flex;
+  flex-direction: column;
+  /* gap: var(--spacing-md); */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width: 768px) {
+  .app {
+    grid-template-columns: 1fr; /* Stack vertically on small screens */
   }
 }
