--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -70,8 +70,8 @@
       display: flex;
       width: 100%;
       flex-direction: row;
-      flex-wrap: nowrap;
+      flex-wrap: wrap;
       align-items: center;
-      justify-content: space-around;
+      justify-content: space-evenly;
     }
   }
